--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -1,14 +1,30 @@
 <html>
 <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
+    <meta name="description" content=""/>
     <title>RPG</title>
     <script src=https://code.jquery.com/jquery-3.6.0.min.js></script>
-    <link rel="stylesheet" href="/css/my.css">
+    <link href="/css/my.css" rel="stylesheet">
 </head>
 <body>
 <h1>RPG admin panel</h1>
+<h2>Accounts List</h2>
+<div class="count">
+    <h3>Count per page: </h3>
+<form class="page-size">
+<select  name="pageSize">
+    <option selected value=3>3</option>
+    <option  value=10 >10</option>
+    <option value=20>20</option>
+</select>
+</form>
+</div>
 <table class="accountsList">
-    <h2>Accounts List</h2>
-   <tbody class="rows">
+    <tbody class="rows">
     <tr>
         <td>#</td>
         <td>Name</td>
@@ -19,24 +35,27 @@
         <td>Birthday</td>
         <td>Banned</td>
     </tr>
-   </tbody>
+    </tbody>
 </table>
 <div class="paging-buttons">
     <span class="pages">Pages: </span>
 </div>
 <template class="account-template">
     <tr class="data-row">
-    <td class="table__id"></td>
-    <td class="table__name"></td>
-    <td class="table__title"></td>
-    <td class="table__race"></td>
-    <td class="table__profession"></td>
-    <td class="table__level"></td>
-    <td class="table__birthday"></td>
-    <td class="table__banned"></td>
+        <td class="table__id"></td>
+        <td class="table__name"></td>
+        <td class="table__title"></td>
+        <td class="table__race"></td>
+        <td class="table__profession"></td>
+        <td class="table__level"></td>
+        <td class="table__birthday"></td>
+        <td class="table__banned"></td>
     </tr>
 </template>
-<script>
+<script type="module">
+
+    import Account from "../css/Account.js";
+
     const baseurl = "rest/players";
     const playersCount = "rest/players/count";
     var pageSize = 0;
@@ -44,56 +63,26 @@
     var countAccounts = 0;
     var countPages = 0;
 
- function getAccounts() {
-     $.get(baseurl, function (data) {
-
-         data.forEach(item => {
-             let row = new Account(item).generateRow();
-             document.querySelector(".rows").append(row);
-         })
-     });
- }
- function getPlayers() {
-     $.get(playersCount, function (data) {
-console.log(data)
-                    document.querySelector(".paging-buttons").textContent = data;
-            });
- }
-
-
- getAccounts();
- getPlayers();
-
-    class Account {
-        constructor(item) {
-            this.id = item.id;
-            this.name = item.name;
-            this.title = item.title;
-            this.race = item.race;
-            this.profession = item.profession;
-            this.level = item.level;
-            this.birthday = item.birthday;
-            this.banned = item.banned;
-        }
-
-        _getTemplate() {
-            return document.querySelector(".account-template").content.cloneNode(true);
-        }
-
-        generateRow() {
-            this.row = this._getTemplate();
-            this.row.querySelector(".table__id").textContent = this.id;
-            this.row.querySelector(".table__name").textContent = this.name;
-            this.row.querySelector(".table__title").textContent = this.title;
-            this.row.querySelector(".table__race").textContent = this.race;
-            this.row.querySelector(".table__profession").textContent = this.profession;
-            this.row.querySelector(".table__level").textContent = this.level;
-            this.row.querySelector(".table__birthday").textContent = this.birthday;
-            this.row.querySelector(".table__banned").textContent = this.banned;
-            return this.row;
-        }
-
+    function getAccounts() {
+        $.get(baseurl, function (data) {
+            data.forEach(item => {
+                let row = new Account(item).generateRow();
+                document.querySelector(".rows").append(row);
+            })
+        });
     }
+
+    function getPlayers() {
+        $.get(playersCount, function (data) {
+            document.querySelector(".paging-buttons").textContent = data;
+        });
+    }
+
+
+    getAccounts();
+    getPlayers();
+
+
 </script>
 
 </body>
