--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -15,13 +15,13 @@
 <h2>Accounts List</h2>
 <div class="count">
     <h3>Count per page: </h3>
-<form class="page-size">
-<select  name="pageSize">
-    <option selected value=3>3</option>
-    <option  value=10 >10</option>
-    <option value=20>20</option>
-</select>
-</form>
+    <form >
+        <select class="page-size" name="pageSize">
+            <option selected value=3>3</option>
+            <option value=10>10</option>
+            <option value=20>20</option>
+        </select>
+    </form>
 </div>
 <table class="accountsList">
     <tbody class="rows">
@@ -39,6 +39,9 @@
 </table>
 <div class="paging-buttons">
     <span class="pages">Pages: </span>
+    <div class="buttons">
+        <button class="button-row">1</button>
+    </div>
 </div>
 <template class="account-template">
     <tr class="data-row">
@@ -52,34 +55,59 @@
         <td class="table__banned"></td>
     </tr>
 </template>
+<template class="button-template">
+    <button class="button-row" id="#">1</button>
+</template>
 <script type="module">
 
     import Account from "../css/Account.js";
 
+    const pageSize = document.querySelector('.page-size');
+    const buttons = document.querySelector('.buttons')
     const baseurl = "rest/players";
     const playersCount = "rest/players/count";
-    var pageSize = 0;
+    var pagesNumber = 3;
+    var numberOfButtons = 1
     var currentPageIndex = 0;
     var countAccounts = 0;
     var countPages = 0;
+    const buttonTemplate = document.querySelector('.button-template');
 
-    function getAccounts() {
-        $.get(baseurl, function (data) {
-            data.forEach(item => {
+    $("select").change(function(){
+         pagesNumber = this.value;
+
+    });
+
+    function getAccounts(pageNumber, pageSize) {
+        let url = baseurl + "/?pageNumber=" + pageNumber.toString() + "&pageSize=" + pageSize.toString();
+        $.get(url, function (data) {
+              data.forEach(item => {
+
                 let row = new Account(item).generateRow();
                 document.querySelector(".rows").append(row);
-            })
+            });
+           numberOfButtons =  ( getPlayers()/ pageSize);
+            for (let i = 1; i < numberOfButtons+1; i++) {
+               let newButton  = buttonTemplate.content.cloneNode(true);
+               newButton.textContent = i.toString();
+               newButton.id =i.toString();
+             buttons.append(newButton);
+            }
         });
     }
+
+
+
 
     function getPlayers() {
         $.get(playersCount, function (data) {
-            document.querySelector(".paging-buttons").textContent = data;
+            countAccounts = data;
         });
+        return countAccounts;
     }
 
 
-    getAccounts();
+    getAccounts(currentPageIndex,pagesNumber);
     getPlayers();
 
 
